fixed scrollbars and code box sizing

--- a/Public/css/sync.theater.css
+++ b/Public/css/sync.theater.css
@@ -103,6 +103,8 @@ body.dimmed {
 
 #code {
   color: #42A5F5;
+  background: transparent;
+  width: 210px;
 }
 
 a {
@@ -110,14 +112,20 @@ a {
 }
 
 .vjs-poster{
-  text-align: center;
-  color: #bdbdbd;
-  font-family: Raleway;
-	font-size: 25px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 400;
-	line-height: 35px;
+    text-align: center;
+    color: #bdbdbd;
+    font-family: Raleway;
+    font-size: 25px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    line-height: 35px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 #welcomelist
 {
@@ -175,13 +183,13 @@ a {
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #F5F5F5;
+	background-color: rgba(0,0,0,0)
 }
 
 #chat_area::-webkit-scrollbar
 {
 	width: 10px;
-	background-color: #F5F5F5;
+	background-color: rgba(0,0,0,0)
 }
 
 #chat_area::-webkit-scrollbar-thumb
@@ -197,16 +205,38 @@ a {
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #F5F5F5;
+	background-color: rgba(0,0,0,0);
 }
 
 #queue::-webkit-scrollbar
 {
 	width: 10px;
-	background-color: #F5F5F5;
+	background-color: rgba(0,0,0,0);
 }
 
 #queue::-webkit-scrollbar-thumb
+{
+	background-color: #0ae;
+	
+	background-image: -webkit-gradient(linear, 0 0, 0 100%,
+	                   color-stop(.5, rgba(255, 255, 255, .2)),
+					   color-stop(.5, transparent), to(transparent));
+}
+
+html::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: rgba(0,0,0,0);
+}
+
+html::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: rgba(0,0,0,0);
+}
+
+html::-webkit-scrollbar-thumb
 {
 	background-color: #0ae;
 	
